Profile Photo: Progressive loading, fix flickering (#2116)

--- a/src/components/common/ProfilePhoto.scss
+++ b/src/components/common/ProfilePhoto.scss
@@ -37,4 +37,20 @@
   &.saved-messages {
     font-size: 20rem;
   }
+
+  .thumb {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+  }
+
+  .thumb, .avatar-media {
+    // @optimization
+    &:not(.shown) {
+      display: block !important;
+    }
+  }
 }
